k8s/peer-authentication-policy.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: strict-peer-auth
  namespace: "istio-system"
spec:
  mtls:
    mode: STRICT
