k8s/authentication.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication
      version: v1
  template:
    metadata:
      labels:
        app: authentication
        version: v1
    spec:
      containers:
      - image: alessios7/authentication
        imagePullPolicy: Always
        name: authentication
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: authentication
  labels:
    app: authentication
    service: authentication
spec:
  ports:
  - name: http
    port: 8081
    targetPort: 8081
  selector:
    app: authentication
