k8s/historicaldata.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: historicaldata
spec:
  replicas: 1
  selector:
    matchLabels:
      app: historicaldata
      version: v1
  template:
    metadata:
      labels:
        app: historicaldata
        version: v1
    spec:
      containers:
      - image: alessios7/historicaldata
        imagePullPolicy: Always
        name: historicaldata
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: historicaldata
  labels:
    app: historicaldata
    service: historicaldata
spec:
  ports:
  - name: http
    port: 8080 
    targetPort: 8080
  selector:
    app: historicaldata
