k8s/config-ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: mygateway
spec:
  selector:
    istio: ingressgateway # use istio default ingress gateway
  servers:
#  - port:
#      number: 80
#      name: http
#      protocol: HTTP
#    hosts:
#      - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: httpbin-credential # must be the same as secret
    hosts:
    - "*" # "httpbin.example.com" 
---
  apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: mygatewayconfig
  spec:
    hosts:
    -  "*" # "httpbin.example.com"
    gateways:
    - mygateway
    http:
      - name: "historicaldata-routes"
        match:
        - uri:
            prefix: /historical/
        rewrite:
          uri: /
        route:
        - destination:
            port:
              number: 8080
            host: historicaldata
      - name: "authentication-routes"
        match:
        - uri:
            prefix: /auth/
        rewrite:
          uri: /
        route:
        - destination:
            port:
              number: 8081
            host: authentication
      - name: "kafka-bridge-routes"
        match:
        - uri:
            prefix: /bridge/
        rewrite:
          uri: /
        route:
        - destination:
            port:
              number: 8082
            host: my-bridge-bridge-service
